# smartcalc_v1.0

./: .gitattributes  README.md
src/: Makefile
src/build-view-Qt_6_2_4_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/build-view-Qt_6_2_4_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-c71c93ee29b351f84546.json  cmakeFiles-v1-82401ab14beb39ac284c.json  codemodel-v2-7c784276567db31c26f4.json  index-2023-09-27T20-00-23-0470.json  target-Notation-Debug-9a7f3482fa365c8aa6f7.json  target-Notation_autogen-Debug-671a6b3ef67dc0ecf105.json  target-Notation_autogen_timestamp_deps-Debug-b1082d9d5e8a68b8ebf4.json  target-SmartCalc-Debug-c503e36da2f5192f214b.json  target-SmartCalc_autogen-Debug-e8b1cd772074e0b3a070.json  target-SmartCalc_autogen_timestamp_deps-Debug-19966d1ada3f693e1bcb.json
src/build-view-Qt_6_2_4_for_macOS-Debug/Notation_autogen/: deps
src/build-view-Qt_6_2_4_for_macOS-Debug/SmartCalc.app/Contents/: Info.plist
src/build-view-Qt_6_2_4_for_macOS-Debug/SmartCalc_autogen/: deps
src/build-view-Qt_6_2_4_for_macOS-Debug/SmartCalc_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
src/build-view-Qt_6_2_4_for_macOS-Debug/SmartCalc_autogen/include/: ui_mainwindow.h
src/model/: Makefile
src/model/arithmetic/include/: rpn.h  smartcalc.h  stack.h  utils.h
src/model/arithmetic/source/: rpn.c  smartcalc.c  stack.c  utils.c
src/model/credit/: credit.c  credit.h
src/model/deposit/: deposit.c  deposit.h
src/model/tests/: arithmetic_tests.c  tests.c  tests.h
src/view/: CMakeLists.txt  CMakeLists.txt.user.a79dec8  mainwindow.cpp  mainwindow.h  mainwindow.ui
